[project]
name = "hotel-room-reservation-system"
version = "1.0.0"
description = "Backend API for hotel room booking with optimal room assignment"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-multipart",
    "mangum",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
